MobileRobotik/HomeRob/ezmr_ws/log/build_2025-09-27_10-42-20/drive_rob/stderr.log
  File "/home/philnoc/ezmr_ws/install/drive_rob/lib/python3.10/site-packages/drive_rob/robot_square1.py", line 18
    			if self.loopcount=4:
    			   ^^^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?

